# scripts

3rdparty_scanning/demo/: 2-get-git-repo.sh  3-build-app.sh  6-image-2-tar.sh  7-clair-scan.sh  8-iq-scan-all.sh  clair-scanner  do-scan.sh
clair-demo/: 1-start-clair.sh  4-build-image.sh  5-push-image.sh  Jenkinsfile2  clair-scanner-output.json  myscan.sh  so-build.sh
clair-demo/struts2-rce/: make-bom.sh
cyclone-dx/java/: create-bom.sh
dev-repo/: config.yml.keep
dev-repo/golang-dev/: albums-listing.txt  albums.txt  compilations-listing.txt  compilations-report.go  find-last-accessed.go  itunes_library.go  music-report.go  music-report2.go  music-report3.go
dev-repo/jenkins-jobs/: create-job.py  export-jenkins-jobs.py  get-job.py  import-jenkins-jobs.py  jobs.json  listjobs
dev-repo/nginx-setup/: nginx.conf
dev-repo/services/: bamboo  jenkins  jira  (+3 more)
dev-repo/services.old/: 1_nexus-iq-server-start.sh  2_repo-start.sh  3_jenkins-start.sh  4_remote_repo_start.sh  bamboo-start.sh  jenkins-start-docker.sh  sonarqube-start.sh
docker-tests/: pull-image.sh
jenkins-jobs/: delete-jobs.py  jobs.lst  jobs.txt  list-jobs.py  run-import.sh
nexus_repo/: nxrm3-script-list.groovy
nginx-setup/: make-self-signed-tls-cert.sh
services/: bamboo  iq  jenkins  jira  my-jenkins  repo2
stuff/: Jenkinsfile  pom.2.xml  reference-policies-v5.json  settings.1.xml
success_metrics/: run_prod_image.sh
techstuff/: create-pv-csvfile.go
techstuff/conan-work/conan-swift-demo/demoapp/: CMakeLists.txt  conanfile.txt
techstuff/conan-work/conan-swift-demo/demoapp/src/: main.cpp
(+548 files in other folders)
